[gd_scene load_steps=8 format=3]

[ext_resource type="Script" uid="uid://dobitanfd68rl" path="res://scenes/messages/message_action_bar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cmv58ms0mvvin" path="res://assets/theme/icons/smile.svg" id="2"]
[ext_resource type="Texture2D" path="res://assets/theme/icons/reply.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://blv6l01t36i0q" path="res://assets/theme/icons/edit.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://c8ot78lof3j8n" path="res://assets/theme/icons/delete.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://dwrmq65j76jea" path="res://assets/theme/icons/thread.svg" id="6"]

[sub_resource type="StyleBoxFlat" id="bar_bg"]
bg_color = Color(0.176, 0.188, 0.208, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.22, 0.23, 0.255, 1)
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[node name="MessageActionBar" type="PanelContainer"]
visible = false
z_index = 10
custom_minimum_size = Vector2(0, 32)
theme_override_styles/panel = SubResource("bar_bg")
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ReactButton" type="Button" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(32, 28)
tooltip_text = "Add Reaction"
flat = true
icon = ExtResource("2")
icon_alignment = 1

[node name="ReplyButton" type="Button" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(32, 28)
tooltip_text = "Reply"
flat = true
icon = ExtResource("3")
icon_alignment = 1

[node name="ThreadButton" type="Button" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(32, 28)
tooltip_text = "Thread"
flat = true
icon = ExtResource("6")
icon_alignment = 1

[node name="EditButton" type="Button" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(32, 28)
tooltip_text = "Edit"
flat = true
icon = ExtResource("4")
icon_alignment = 1

[node name="DeleteButton" type="Button" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(32, 28)
tooltip_text = "Delete"
flat = true
icon = ExtResource("5")
icon_alignment = 1
